--- a/style.css
+++ b/style.css
@@ -316,12 +316,6 @@ nav, .scroll, .header, #projects{
 
 
 
-
-
-
-
-
-
 /* == Navigation style started == */
 nav{
     display: flex;
@@ -598,11 +592,6 @@ nav{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.45);
 }
 
-/* .project__wrapper:hover .project__description{
-    opacity: 1;
-    transform: translateY(-50%);
-} */
-
 .project__wrapper:hover .project__description {
     opacity: 1;
     transform: translateY(-50%);
@@ -678,7 +667,6 @@ nav{
     font-size: 16px;
     margin-top: 8px;
     margin-bottom: 24px;
-    /* font-weight: 400; */
 }
 
 .project__description:hover .project__description--sub-title{
@@ -704,7 +692,6 @@ nav{
 }
 
 .project__description--para{
-    /* font-size: 16px; */
     line-height: 1.4;
     margin: 16px 0;
 }
@@ -722,7 +709,6 @@ nav{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* padding: 8% 0; */
 
  }
 
@@ -747,7 +733,6 @@ nav{
  }
 
  .footer__logo--popper{
-    /* color: gold; */
     position: absolute;
     right: 0;
     top: 100px;
@@ -906,6 +891,7 @@ padding: 5px;
 }
 
 
+/* XS Smaller phones */
 @media (max-width: 480px) {
   .title {
     font-size: 50px;
@@ -950,11 +936,38 @@ padding: 5px;
 .project__description--link{
     font-size: 15px;
   }
+
+  
+
+
+.project__wrapper:hover .project__description {
+    opacity: 1;
+    transform: translateY(-50%);
+}
+
+.project__description{
+    position: absolute;
+    top: 50%;
+    left: 0px;
+    transform: translateY(-65%);
+    color: #fff;
+    max-width: 300px;
+    font-size: 24px;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 10px;
+    margin-left: 50px;
+    border-radius: 8px;
+    opacity: 1;
+    transition: opacity 300ms, transform 900ms ease; /* Smooth transition for opacity and transform description slowly*/
+}
+
+ 
   
 }
 
 
-/* XS Smaller phones */
+
 @media (max-width: 350px) {
     .project__description--title--one{
         left: 15px;}
